<resources>
    <string name="app_name">LibraryApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="new_book">New Book</string>
    <string name="create_book">Create Book</string>
    <string name="author">Author</string>
    <string name="update_book">Update Book</string>
    <string name="editbook">Edit Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="string_author">Author</string>
</resources>