<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertBookFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/txtAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string_author"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Series"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtPageCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="PageCount"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Owner"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Genre"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtCurrentHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="CurrentHolder"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Condition"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Format"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonCreateBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/create_book" />

</LinearLayout>